[gd_scene load_steps=13 format=2]

[ext_resource path="res://Src/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/nbSplash.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Slider/SliderTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Fonts/MenuFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Src/Menu/DevLogViewer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Fonts/DevLog_Mono16.tres" type="DynamicFont" id=9]
[ext_resource path="res://Assets/Fonts/DevLog_Default16.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/Fonts/DevLog_Bold16.tres" type="DynamicFont" id=11]
[ext_resource path="res://Src/Menu/BaseButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://Src/Menu/TabContainer.tres" type="Theme" id=13]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlay" parent="Main" instance=ExtResource( 12 )]
margin_left = 16.0
margin_top = 216.0
margin_right = 144.0
margin_bottom = 240.0
text = "Play"

[node name="ButtonSettings" parent="Main" instance=ExtResource( 12 )]
margin_left = 16.0
margin_top = 264.0
margin_right = 144.0
margin_bottom = 288.0
text = "Settings"

[node name="ButtonExit" parent="Main" instance=ExtResource( 12 )]
margin_left = 16.0
margin_top = 296.0
margin_right = 144.0
margin_bottom = 320.0
text = "Exit"

[node name="LogWindow" type="ColorRect" parent="Main"]
margin_left = 168.0
margin_top = 88.0
margin_right = 616.0
margin_bottom = 336.0
color = Color( 0, 0, 0, 0.388235 )

[node name="DevLogViewer" parent="Main/LogWindow" instance=ExtResource( 8 )]
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/mono_font = ExtResource( 9 )
custom_fonts/bold_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 10 )

[node name="Settings" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="TabContainer" type="TabContainer" parent="Settings"]
margin_left = 200.0
margin_top = 126.0
margin_right = 440.0
margin_bottom = 328.0
theme = ExtResource( 13 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="General" type="Tabs" parent="Settings/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 21.0

[node name="BrightnessSlider" type="HSlider" parent="Settings/TabContainer/General"]
margin_left = 80.0
margin_top = 19.0
margin_right = 200.0
margin_bottom = 35.0
theme = ExtResource( 3 )
min_value = 0.75
max_value = 1.25
step = 0.05
value = 1.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TabContainer/General/BrightnessSlider"]
margin_left = -72.0
margin_right = -9.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "Brightness"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Settings/TabContainer/General/BrightnessSlider"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "1.00"

[node name="ContrastSlider" type="HSlider" parent="Settings/TabContainer/General"]
margin_left = 80.0
margin_top = 53.0
margin_right = 200.0
margin_bottom = 69.0
theme = ExtResource( 3 )
min_value = 0.75
max_value = 1.25
step = 0.05
value = 1.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TabContainer/General/ContrastSlider"]
margin_left = -72.0
margin_right = -9.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "Contrast"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Settings/TabContainer/General/ContrastSlider"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "1.00"

[node name="Graphics" type="Tabs" parent="Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 21.0

[node name="ApplyButton" parent="Settings/TabContainer/Graphics" instance=ExtResource( 12 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = 125.0
margin_right = -56.0
margin_bottom = -35.0
text = "Apply"

[node name="FullscreenButton" parent="Settings/TabContainer/Graphics" instance=ExtResource( 12 )]
margin_left = 152.0
margin_top = 19.0
margin_right = 224.0
margin_bottom = 40.0
text = "Off"

[node name="Label" type="Label" parent="Settings/TabContainer/Graphics/FullscreenButton"]
margin_left = -144.0
margin_right = -80.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 7 )
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionList" type="ItemList" parent="Settings/TabContainer/Graphics"]
margin_left = 8.0
margin_top = 45.0
margin_right = 224.0
margin_bottom = 117.0
custom_styles/bg_focus = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Tabs" parent="Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 21.0

[node name="SoundSlider" type="HSlider" parent="Settings/TabContainer/Sounds"]
margin_left = 80.0
margin_top = 19.0
margin_right = 200.0
margin_bottom = 35.0
theme = ExtResource( 3 )
max_value = 10.0
value = 10.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TabContainer/Sounds/SoundSlider"]
margin_left = -72.0
margin_right = -9.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Settings/TabContainer/Sounds/SoundSlider"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "100%"

[node name="MusicSlider" type="HSlider" parent="Settings/TabContainer/Sounds"]
margin_left = 80.0
margin_top = 53.0
margin_right = 200.0
margin_bottom = 69.0
theme = ExtResource( 3 )
max_value = 10.0
value = 10.0
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/TabContainer/Sounds/MusicSlider"]
margin_left = -72.0
margin_right = -9.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Settings/TabContainer/Sounds/MusicSlider"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "100%"

[node name="BackButton" parent="Settings" instance=ExtResource( 12 )]
margin_left = 256.0
margin_top = 301.0
margin_right = 384.0
margin_bottom = 322.0
text = "Back"

[node name="Copyright" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]©2021 by NimbleBeasts [color=#34859d]`[/color]NimbleBeasts [color=#9d303b]¥[/color]NimbleBeasts[/center]"
text = "©2021 by NimbleBeasts `NimbleBeasts ¥NimbleBeasts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_right = -4.0
margin_bottom = 16.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[right]Version[/right]"
text = "Version"

[connection signal="button_up" from="Main/ButtonPlay" to="." method="_on_ButtonPlay_button_up"]
[connection signal="button_up" from="Main/ButtonSettings" to="." method="_on_ButtonSettings_button_up"]
[connection signal="button_up" from="Main/ButtonExit" to="." method="_on_ButtonExit_button_up"]
[connection signal="value_changed" from="Settings/TabContainer/General/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="Settings/TabContainer/General/ContrastSlider" to="." method="_on_ContrastSlider_value_changed"]
[connection signal="button_up" from="Settings/TabContainer/Graphics/ApplyButton" to="." method="_on_ApplyButton_button_up"]
[connection signal="button_up" from="Settings/TabContainer/Graphics/FullscreenButton" to="." method="_on_FullscreenButton_button_up"]
[connection signal="value_changed" from="Settings/TabContainer/Sounds/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="Settings/TabContainer/Sounds/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="button_up" from="Settings/BackButton" to="." method="_on_BackButton_button_up"]
